# tbep

./: Procfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCH_TBEP.md  PRD_TBEP.md  TASKS.md  TASKS_TBEP.md
src/: config.py  error_messages.py  main.py
src/commands/: command_processor.py  help_command_processor.py  profile_command_processor.py  reset_command_processor.py  start_command_processor.py  stats_command_processor.py  topic_command_processor.py
src/llm/: chatgpt_client.py  gemma_openrouter_client.py  llm_client.py  llm_client_factory.py  openrouter_client.py
src/messages/: message_processor.py  text_message_processor.py
src/state/: user_state_store.py  user_state_store_memory.py
tests/: test_config.py  test_main.py  test_smoke.py
tests/commands/: test_command_processor.py  test_help_command_processor.py  test_profile_command_processor.py  test_reset_command_processor.py  test_start_command_processor.py  test_stats_command_processor.py  test_topic_command_processor.py
tests/llm/: test_chatgpt_client.py  test_gemma_openrouter_client.py  test_llm_client.py  test_llm_client_factory.py  test_openrouter_client.py
tests/messages/: test_message_processor.py  test_text_message_processor.py
tests/state/: test_user_state_store.py  test_user_state_store_memory.py
